# extension

./: README.md  install_osi.sh  package.json  pyproject.toml
src/: backend.js  codebase.js  config.js  main.js  shell-tools.js
src/localcoder_cli/: backend.py  codebase.py  config.py  main.py
src/osi/: backend.py  config.py  main.py  shell_tools.py
