[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osi-cli"
version = "0.1.0"
description = "OSI: local and cloud coding assistant CLI with shell permissions and codebase awareness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "rich>=13.7.1",
]

[project.scripts]
osi = "osi.main:run"

[tool.setuptools.packages.find]
where = ["src"]
